[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/Tutorial.gd" type="Script" id=1]
[ext_resource path="res://TileSets/AutoTilePisos.tres" type="TileSet" id=2]
[ext_resource path="res://Escenas/Puerta.tscn" type="PackedScene" id=3]
[ext_resource path="res://TileSets/AutoTileParedes.tres" type="TileSet" id=4]
[ext_resource path="res://Escenas/Personajes/PlayerOne.tscn" type="PackedScene" id=5]
[ext_resource path="res://Escenas/ModoVision.tscn" type="PackedScene" id=6]
[ext_resource path="res://Escenas/Portafolio.tscn" type="PackedScene" id=7]
[ext_resource path="res://Escenas/Salida.tscn" type="PackedScene" id=8]
[ext_resource path="res://Escenas/HazLuz.tscn" type="PackedScene" id=9]
[ext_resource path="res://GFX/Interface/PNG/crossair_blueOutline.png" type="Texture" id=10]
[ext_resource path="res://GFX/Interface/PNG/crossair_white.png" type="Texture" id=11]
[ext_resource path="res://SFX/message.wav" type="AudioStream" id=12]
[ext_resource path="res://Escenas/GUITutorial.tscn" type="PackedScene" id=13]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 121.392 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 30.8296 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 10, 33.4837 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 30.6793, 21.6429 )

[node name="Tutorial" type="Node2D"]

script = ExtResource( 1 )

[node name="Pisos" type="TileMap" parent="." index="0"]

mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 2
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 65538, 17, 0, 65539, 17, 0, 65540, 17, 0, 65541, 17, 0, 65542, 17, 0, 65543, 17, 0, 65544, 17, 0, 65545, 17, 0, 65546, 17, 0, 65547, 17, 0, 65548, 17, 0, 131074, 17, 0, 131075, 16, 0, 131076, 16, 0, 131077, 16, 0, 131078, 16, 0, 131079, 16, 0, 131080, 16, 0, 131081, 16, 0, 131082, 16, 0, 131083, 16, 0, 131084, 17, 0, 196610, 17, 0, 196611, 16, 0, 196612, 16, 0, 196613, 16, 0, 196614, 16, 0, 196615, 16, 0, 196616, 16, 0, 196617, 16, 0, 196618, 16, 0, 196619, 16, 0, 196620, 17, 0, 196621, 17, 0, 196622, 17, 0, 196623, 17, 0, 196624, 17, 0, 196625, 17, 0, 262146, 17, 0, 262147, 16, 0, 262148, 16, 0, 262149, 16, 0, 262150, 16, 0, 262151, 16, 0, 262152, 16, 0, 262153, 16, 0, 262154, 16, 0, 262155, 16, 0, 262156, 16, 0, 262157, 16, 0, 262158, 16, 0, 262159, 16, 0, 262160, 16, 0, 262161, 17, 0, 327682, 17, 0, 327683, 16, 0, 327684, 16, 0, 327685, 16, 0, 327686, 16, 0, 327687, 16, 0, 327688, 16, 0, 327689, 16, 0, 327690, 16, 0, 327691, 16, 0, 327692, 16, 0, 327693, 16, 0, 327694, 16, 0, 327695, 16, 0, 327696, 16, 0, 327697, 17, 0, 327698, 6, 0, 327699, 6, 0, 393218, 17, 0, 393219, 16, 0, 393220, 16, 0, 393221, 16, 0, 393222, 16, 0, 393223, 16, 0, 393224, 16, 0, 393225, 16, 0, 393226, 16, 0, 393227, 16, 0, 393228, 17, 0, 393229, 17, 0, 393230, 17, 0, 393231, 17, 0, 393232, 17, 0, 393233, 17, 0, 393235, 6, 0, 393236, 6, 0, 393237, 6, 0, 393238, 6, 0, 458754, 17, 0, 458755, 16, 0, 458756, 16, 0, 458757, 16, 0, 458758, 16, 0, 458759, 16, 0, 458760, 16, 0, 458761, 16, 0, 458762, 16, 0, 458763, 16, 0, 458764, 17, 0, 458765, 6, 0, 458766, 6, 0, 458767, 6, 0, 458768, 6, 0, 458769, 6, 0, 458774, 6, 0, 524290, 17, 0, 524291, 16, 0, 524292, 16, 0, 524293, 16, 0, 524294, 16, 0, 524295, 16, 0, 524296, 16, 0, 524297, 16, 0, 524298, 16, 0, 524299, 16, 0, 524300, 17, 0, 524301, 6, 0, 524302, 6, 0, 524303, 6, 0, 524304, 6, 0, 524305, 6, 0, 524306, 6, 0, 524307, 6, 0, 524310, 6, 0, 589826, 17, 0, 589827, 17, 0, 589828, 17, 0, 589829, 17, 0, 589830, 17, 0, 589831, 17, 0, 589832, 17, 0, 589833, 17, 0, 589834, 17, 0, 589835, 17, 0, 589836, 17, 0, 589837, 6, 0, 589846, 6, 0, 655370, 6, 0, 655371, 6, 0, 655372, 6, 0, 655373, 6, 0, 655374, 6, 0, 655375, 6, 0, 655376, 6, 0, 655377, 6, 0, 655378, 6, 0, 655379, 6, 0, 655380, 6, 0, 655381, 6, 0, 655382, 6, 0, 720906, 6, 0, 786442, 6, 0, 786443, 6, 0, 786444, 6, 0, 786445, 6, 0, 786446, 6, 0, 786447, 6, 0, 851978, 6, 0, 851979, 6, 0, 851980, 6, 0, 851981, 6, 0, 851982, 6, 0, 851983, 6, 0, 917514, 6, 0, 917515, 6, 0, 917516, 6, 0, 917517, 6, 0, 917518, 6, 0, 917519, 6, 0, 983050, 6, 0, 983051, 6, 0, 983052, 6, 0, 983053, 6, 0, 983054, 6, 0, 983055, 6, 0 )
_sections_unfolded = [ "Collision" ]

[node name="Puertas" type="Node2D" parent="." index="1"]

editor/display_folded = true

[node name="Puerta" parent="Puertas" index="0" instance=ExtResource( 3 )]

position = Vector2( 803.412, 351.958 )
rotation = 1.5708
_sections_unfolded = [ "Collision", "Transform" ]

[node name="Paredes" type="TileMap" parent="." index="2"]

mode = 0
tile_set = ExtResource( 4 )
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 2
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 65538, 0, 262144, 65539, 0, 262146, 65540, 0, 262146, 65541, 0, 262146, 65542, 0, 262146, 65543, 0, 262146, 65544, 0, 262146, 65545, 0, 262146, 65546, 0, 262146, 65547, 0, 262146, 65548, 0, 262145, 131074, 0, 327682, 131084, 0, 327682, 196610, 0, 327682, 196620, 0, 524290, 196621, 0, 524293, 196622, 0, 262146, 196623, 0, 262146, 196624, 0, 262146, 196625, 0, 262145, 262146, 0, 327682, 262156, 0, 327687, 262157, 0, 327688, 262161, 0, 327680, 262162, 0, 262146, 262163, 0, 262146, 262164, 0, 262145, 327682, 0, 327682, 327700, 0, 327680, 327701, 0, 262146, 327702, 0, 262146, 327703, 0, 262145, 393218, 0, 327682, 393222, 0, 262151, 393223, 0, 458756, 393224, 0, 262152, 393228, 0, 262144, 393229, 0, 262146, 393230, 0, 262146, 393231, 0, 262146, 393232, 0, 262146, 393233, 0, 262146, 393234, 0, 262145, 393239, 0, 327682, 458754, 0, 327682, 458758, 0, 393220, 458759, 0, 393222, 458760, 0, 393221, 458764, 0, 327682, 458770, 0, 327680, 458771, 0, 262146, 458772, 0, 524292, 458773, 0, 262152, 458775, 0, 327682, 524290, 0, 327682, 524294, 0, 393220, 524295, 0, 393222, 524296, 0, 393221, 524300, 0, 327682, 524308, 0, 393220, 524309, 0, 393221, 524311, 0, 327682, 589826, 0, 327680, 589827, 0, 262146, 589828, 0, 262146, 589829, 0, 262146, 589830, 0, 589828, 589831, 0, 458757, 589832, 0, 589829, 589833, 0, 262147, 589834, 0, 262146, 589835, 0, 262146, 589836, 0, 327681, 589838, 0, 327686, 589839, 0, 262146, 589840, 0, 262146, 589841, 0, 262146, 589842, 0, 262146, 589843, 0, 262146, 589844, 0, 589828, 589845, 0, 327688, 589847, 0, 327682, 655369, 0, 327682, 655383, 0, 327682, 720905, 0, 327682, 720907, 0, 327686, 720908, 0, 262146, 720909, 0, 262146, 720910, 0, 262146, 720911, 0, 262146, 720912, 0, 262147, 720913, 0, 262146, 720914, 0, 262146, 720915, 0, 262146, 720916, 0, 262146, 720917, 0, 262146, 720918, 0, 262146, 720919, 0, 327681, 786441, 0, 327682, 786448, 0, 327682, 851977, 0, 327682, 851984, 0, 327682, 917513, 0, 327682, 917520, 0, 327682, 983049, 0, 327682, 983056, 0, 327682, 1048585, 0, 327680, 1048586, 0, 262146, 1048587, 0, 262146, 1048588, 0, 262146, 1048589, 0, 262146, 1048590, 0, 262146, 1048591, 0, 262146, 1048592, 0, 327681 )
_sections_unfolded = [ "Collision" ]

[node name="Personaje" parent="." index="3" instance=ExtResource( 5 )]

editor/display_folded = true
position = Vector2( 243.507, 180.93 )

[node name="Camera2D" type="Camera2D" parent="Personaje" index="7"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[node name="Vision" parent="." index="4" instance=ExtResource( 6 )]

[node name="Portafolio" parent="." index="5" instance=ExtResource( 7 )]

position = Vector2( 996.565, 514.687 )

[node name="Salida" parent="." index="6" instance=ExtResource( 8 )]

margin_left = 667.0
margin_top = 821.0
margin_right = 985.0
margin_bottom = 993.0

[node name="Luces" type="Node2D" parent="." index="7"]

editor/display_folded = true

[node name="HazLuz" parent="Luces" index="0" instance=ExtResource( 9 )]

position = Vector2( 578.264, 427.253 )
rotation = -0.316183
scale = Vector2( 0.5, 0.5 )
offset = Vector2( 320, 0 )
_sections_unfolded = [ "Shadow", "Transform" ]

[node name="HazLuz2" parent="Luces" index="1" instance=ExtResource( 9 )]

position = Vector2( 1086.55, 308.162 )
rotation = -3.35095
scale = Vector2( 0.5, 0.5 )
offset = Vector2( 320, 0 )
_sections_unfolded = [ "Shadow", "Transform" ]

[node name="Objetivos" type="Node2D" parent="." index="8"]

editor/display_folded = true

[node name="Moverse" type="Position2D" parent="Objetivos" index="0"]

position = Vector2( 483.729, 310.618 )

[node name="Puerta" type="Position2D" parent="Objetivos" index="1"]

position = Vector2( 799.257, 352.361 )

[node name="Vision" type="Position2D" parent="Objetivos" index="2"]

position = Vector2( 1341.92, 418.658 )

[node name="Loot" type="Position2D" parent="Objetivos" index="3"]

position = Vector2( 977.279, 516.877 )

[node name="Salir" type="Position2D" parent="Objetivos" index="4"]

position = Vector2( 798.029, 865.555 )

[node name="AreasObjetivo" type="Node2D" parent="." index="9"]

editor/display_folded = true

[node name="ObjetivoMoverse" type="Area2D" parent="AreasObjetivo" index="0"]

editor/display_folded = true
position = Vector2( 498.804, 259.158 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreasObjetivo/ObjetivoMoverse" index="0"]

shape = SubResource( 1 )

[node name="ObjetivoPuerta" type="Area2D" parent="AreasObjetivo" index="1"]

editor/display_folded = true
position = Vector2( 844.935, 352.295 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreasObjetivo/ObjetivoPuerta" index="0"]

shape = SubResource( 2 )

[node name="ObjetivoVision" type="Area2D" parent="AreasObjetivo" index="2"]

editor/display_folded = true
position = Vector2( 1354.93, 414.861 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreasObjetivo/ObjetivoVision" index="0"]

shape = SubResource( 3 )

[node name="ObjetivoLoot" type="Area2D" parent="AreasObjetivo" index="3"]

editor/display_folded = true
position = Vector2( 994.393, 517.348 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreasObjetivo/ObjetivoLoot" index="0"]

shape = SubResource( 4 )

[node name="Objetivo" type="Sprite" parent="." index="10"]

editor/display_folded = true
position = Vector2( 66.2977, 171.883 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}

[node name="Light2D" type="Light2D" parent="Objetivo" index="0"]

enabled = true
editor_only = false
texture = ExtResource( 11 )
offset = Vector2( 0, 0 )
texture_scale = 1.0
color = Color( 1, 1, 1, 1 )
energy = 1.0
mode = 0
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 0.0
shadow_filter = 0
shadow_filter_smooth = 0.0
shadow_item_cull_mask = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="11"]

stream = ExtResource( 12 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Tween" type="Tween" parent="." index="12"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="GUITutorial" parent="." index="13" instance=ExtResource( 13 )]

[connection signal="body_entered" from="AreasObjetivo/ObjetivoMoverse" to="." method="_on_ObjetivoMoverse_body_entered"]

[connection signal="body_entered" from="AreasObjetivo/ObjetivoPuerta" to="." method="_on_ObjetivoPuerta_body_entered"]

[connection signal="body_entered" from="AreasObjetivo/ObjetivoVision" to="." method="_on_ObjetivoVision_body_entered"]

[connection signal="body_entered" from="AreasObjetivo/ObjetivoLoot" to="." method="_on_ObjetivoLoot_body_entered"]


